css/index.css
@import url('https://files.bdph.me/reset.css');
@import url('../assets/fonts/museo.css');
@import url('./story.css');

:root {
  --background-color: #251319;
}

body {
  height: 100vh;
  overscroll-behavior: none;
  font-family: 'Museo', sans-serif;
}

#wanned {
  background-color: var(--background-color);
  display: block;
}

#fog {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  top: 0;
  left: 0;
  background: radial-gradient(
    circle,
    rgba(0, 0, 0, 0) 0%,
    rgba(255, 0, 0, 0.15) 80%
  );
  transform: scale(1);
  opacity: 1;
  filter: blur(10px);
  transition-property: transform, opacity;
  transition: 500ms ease-out;
}

#fog.hidden {
  transform: scale(5);
  opacity: 0;
}

#light {
  position: absolute;
  width: 200px;
  height: 200px;
  background: white;
  z-index: 1;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: radial-gradient(
    circle,
    rgba(0, 0, 0, 0) 0%,
    rgba(255, 255, 255, 0.3) 80%
  );
  border-radius: 50%;
  filter: blur(40px);
  opacity: 1;
  transition: opacity 500ms ease-out;
}

#light.hidden {
  opacity: 0;
}

